readme updated + fix z-index on alert

--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -167,7 +167,7 @@ a.btn-primary:hover{
     width: 20px;
     text-align: center;
     vertical-align: middle;
-    z-index: 2;
+    z-index: 100;
 }
 
 .info-btn:hover + .info-text{
